--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -49,7 +49,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/Name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bgc_profile"
@@ -74,7 +74,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/hours"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
@@ -103,7 +103,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/textViw7"
+                        android:id="@+id/paid"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="35dp"
@@ -123,7 +123,7 @@
             </LinearLayout>
         </LinearLayout>
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/Email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25dp"
@@ -131,10 +131,11 @@
             android:text="E-mail: ivanov@gmail.com" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/exit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25dp"
+            android:gravity="center"
             android:layout_marginTop="10dp"
             android:textColor="@color/white"
             android:text="Exit" />
