--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -134,10 +134,10 @@
             android:id="@+id/exit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="25dp"
-            android:gravity="center"
             android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:text="Exit"
             android:textColor="@color/white"
-            android:text="Exit" />
+            android:textSize="25dp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
